[package]
name = "krb5rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
ascii = "1.1.0"
bitvec = "1.0.1"
cbc = "0.1.2"
chrono = "0.4.38"
ecb = "0.1.2"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rasn = "0.15.0"
sha1 = "0.10.6"
